--- a/package.json
+++ b/package.json
@@ -12,17 +12,27 @@
   "dependencies": {
     "@typescript-eslint/parser": "^8.0.1",
     "framer-motion": "^11.3.24",
+    "ioredis": "^5.4.1",
+    "jotai": "^2.9.3",
+    "neverthrow": "^7.0.1",
+    "newtype-ts": "^0.3.5",
     "next": "14.2.5",
+    "ramda": "^0.30.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/ramda": "^0.30.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-neverthrow": "^1.1.4",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-unused-imports": "^4.1.3",
     "postcss": "^8",
