--- a/package.json
+++ b/package.json
@@ -10,18 +10,32 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@typescript-eslint/parser": "^8.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
+    "install": "^0.13.0",
     "ioredis": "^5.4.1",
     "jotai": "^2.9.3",
+    "lucide-react": "^0.435.0",
     "neverthrow": "^7.0.1",
     "newtype-ts": "^0.3.5",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
+    "npm": "^10.8.2",
     "ramda": "^0.30.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "ts-pattern": "^5.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
