--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.3.1",
+    "use-sound": "^4.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
